--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="heic,heif,convert,converter,heic converter,image converter,convert heic online,javascript,catdad">
 
   <!-- Manifest -->
 <!--  <link rel="manifest" href="./manifest.json">-->
