adding prepared canvas to the dom for now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>See the <a href="https://github.com/catdad-experiments/share-edit">GitHub page</a> for more info.</p>
   </div>
 
-  <div class="container hide">
+  <div id="main" class="container limit hide">
 
   </div>
 
