--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!--<link rel="manifest" href="./manifest.json">-->
   <meta name="theme-color" content="#202124">
   <link rel="icon" type="image/png" href="assets/icon-512.png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
@@ -22,7 +23,16 @@
   </div>
 
   <div id="main" class="container limit hide">
-
+    <div id="main" class="main"></div>
+    <div class="controls">
+      <div class="general-tools palette">
+        <i class="material-icons material-inline hide" title="Install" id="install">archive</i>
+        <i class="material-icons material-inline" title="Open" id="open">photo</i>
+        <i class="material-icons material-inline" title="Quality" id="quality">equalizer</i>
+        <i class="material-icons material-inline" title="Help" id="help">help</i>
+        <input type="file" id="open-input" class="hide" />
+      </div>
+    </div>
   </div>
 
   <script tye="module">
