removing duplicate id value

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>See the <a href="https://github.com/catdad-experiments/share-edit">GitHub page</a> for more info.</p>
   </div>
 
-  <div id="main" class="container limit hide">
+  <div class="container limit hide">
     <div id="main" class="main"></div>
     <div class="controls">
       <div class="general-tools palette">
