allowing multiple files in open dialog, sending correct event for this app to convert files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <i class="material-icons material-inline" title="Open" id="open">photo</i>
         <i class="material-icons material-inline" title="Quality" id="quality">equalizer</i>
         <i class="material-icons material-inline" title="Help" id="help">help</i>
-        <input type="file" id="open-input" class="hide" />
+        <input type="file" id="open-input" class="hide" multiple />
       </div>
     </div>
   </div>
