adding automatic download for converted images

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     document.querySelector('.container').classList.remove('hide');
   </script>
   <script src="https://cdn.jsdelivr.net/npm/libheif-js@1.6.1/libheif/libheif.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
   <script type="module">
     import loader from './src/loader.js';
 
