adding toast messages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="theme-color" content="#202124">
   <link rel="icon" type="image/png" href="assets/icon-512.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link href="https://cdn.jsdelivr.net/npm/toastify-js@1.6.1/src/toastify.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
@@ -41,6 +42,7 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/libheif-js@1.6.1/libheif/libheif.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.6.1/src/toastify.min.js"></script>
   <script type="module">
     import loader from './src/loader.js';
 
