--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <i class="material-icons material-inline hide" title="Install" id="install">archive</i>
         <i class="material-icons material-inline" title="Open" id="open">photo</i>
         <i class="material-icons material-inline" title="Quality" id="quality">equalizer</i>
+        <i class="material-icons material-inline" title="Results" id="results">system_update</i>
         <i class="material-icons material-inline" title="Help" id="help">help</i>
         <input type="file" id="open-input" class="hide" multiple />
       </div>
