adding intro instructions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
   </div>
 
   <div class="container limit hide">
-    <div id="main" class="main"></div>
+    <div id="main" class="main">
+      <div id="intro" class="intro">
+        <p><b>Choose a HEIC file</b> or drag it here</p>
+        <i class="material-icons">insert_photo</i>
+      </div>
+    </div>
     <div class="controls">
       <div class="general-tools palette">
         <i class="material-icons material-inline hide" title="Install" id="install">archive</i>
