--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="controls">
       <div class="general-tools palette">
         <i class="material-icons material-inline hide" title="Install" id="install">archive</i>
-        <i class="material-icons material-inline" title="Open" id="open">photo</i>
+        <i class="material-icons material-inline" title="Open" id="open">insert_photo</i>
         <i class="material-icons material-inline" title="Quality" id="quality">equalizer</i>
         <i class="material-icons material-inline" title="Results" id="results">system_update</i>
         <i class="material-icons material-inline" title="Help" id="help">help</i>
