--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <script tye="module">
+  <script type="module">
     document.querySelector('.unsupported').remove();
     document.querySelector('.container').classList.remove('hide');
   </script>
