the intro screen allows you to pick output quality and mode of output

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <p><b>Choose a HEIC file</b> or drag it here</p>
       <i class="material-icons">insert_photo</i>
     </div>
+    <div class="settings">
+      <div class="label">After conversion:</div>
+      <div class="value" data-for="results">...</div>
+      <div class="label">Output format and quality</div>
+      <div class="value" data-for="quality">...</div>
+    </div>
   </div>
 
   <div class="controls">
