--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <i class="material-icons material-inline" title="Open" id="open">insert_photo</i>
       <i class="material-icons material-inline" title="Quality" id="quality">equalizer</i>
       <i class="material-icons material-inline" title="Results" id="results">system_update</i>
+      <i class="material-icons material-inline" title="Theme" id="theme" data-theme="auto">brightness_auto</i>
       <i class="material-icons material-inline" title="Help" id="help">help</i>
       <input type="file" id="open-input" class="hide" multiple />
     </div>
