progress will show initially and hide once app is loaded
theme will be applied underneath the loader

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     </div>
   </div>
 
+  <div id="progress" class="progress init">
+    <div class="ring"></div>
+  </div>
+
   <script type="module">
     document.querySelector('#unsupported').remove();
     document.querySelector('#main').classList.remove('hide');
